# Content_factory

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  GITNEXUS.md  START_HERE.md  alembic.ini  line_budget.yaml  pyproject.toml  vet_jury_models.py
.github/workflows/: ci.yml
app/: main.py
docs/: CONSOLIDATION_PLAN.md  DECISIONS.md  GENERATOR_CHECKER_PORT.md  REFACTOR_FIX_PLAN.md  SKILLS_ARCHITECTURE.md  TASKS.md  UI_LEGACY_PARITY_AUDIT.md  W6_UI_PORT.md
legacy/Proverka/: pyproject.toml
legacy/Proverka/src/content_audit/: cache.py  checks.py  cli.py  domain.py  evaluation.py  exporters.py  ingestion.py  openrouter.py  orchestrator.py  postprocess.py  web_app.py
legacy/Proverka/tests/: test_checks.py  test_dependencies.py  test_evaluation.py  test_ingestion.py  test_postprocess.py
migrations/: env.py
scripts/: seed_reference_catalog.py
tests/: test_access_constructors_skill.py  test_audience_level_skill.py  test_autotests_skill.py  test_branch_structure_skill.py  test_checklist_skill.py  test_competency_weights_skill.py  test_config_thresholds.py  test_content_sufficiency_skill.py  test_core_models.py  test_harness.py  test_llm_core.py  test_methodology_engine.py  test_methodology_gate.py  test_methodology_revision.py  test_migrations.py  test_nav_consistency.py  test_repository_structure_skill.py  test_smoke.py  test_software_constraints_skill.py  test_static_design_system.py  test_static_shell_markdown.py  test_template_blocks_skill.py  test_tm3_profiles.py  test_ui_final_e2e.py  test_voice_skill.py  test_workload_planning_skill.py
(+288 files in other folders)
