[project]
name = "content-audit"
version = "0.1.0"
description = "Инструмент аудита учебного контента по локальной папке проекта."
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.0",
  "PyYAML>=6.0",
  "requests>=2.31",
]

[project.scripts]
audit-content = "content_audit.cli:main"
audit-content-ui = "content_audit.web_app:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
